chore: add deployToMods gradle task to auto-copy JAR to mods folder